Minor random code cleanup.